--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Portfolio Website</title>
+    <title>Sudipta Adhikary Joy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
